--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/solid-js": "^2.0.2",
     "@astrojs/tailwind": "^3.0.1",
     "@fontsource/fira-code": "^4.5.13",
     "astro": "^2.0.8",
+    "solid-js": "^1.6.10",
     "tailwindcss": "^3.0.24"
   }
 }
