--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "astro": "^2.0.8",
     "solid-js": "^1.6.10",
     "tailwindcss": "^3.0.24"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.3"
   }
 }
